--- a/audio/asp/en/0067_cooking_audio-slides.html
+++ b/audio/asp/en/0067_cooking_audio-slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>An egg for bride wealth - Global African Storybook</title>
+  <title>Cooking - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,19 +87,19 @@
 </head>
 <body>
 
-<section id="an-egg-for-bride-wealth" class="slide level1">
-<h1>An egg for bride wealth</h1>
+<section id="cooking" class="slide level1">
+<h1>Cooking</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0085/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/01.jpg" />
 </center>
   
-<p><audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/ogg/01.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/mp3/01.mp3" type="audio/mpeg"> </audio></p>
+<p><audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0067_cooking/ogg/01.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0067_cooking/mp3/01.mp3" type="audio/mpeg"> </audio></p>
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0085/02.jpg" /></p>
-<p>Once upon a time, there was an old woman who loved her grandson very much. She gave him an egg as a gift. She said, “From this egg you will get bride wealth for your marriage when you are of age.” And the boy went on his way.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/ogg/02.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/mp3/02.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/02.jpg" /></p>
+<p>I peel the potatoes.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0067_cooking/ogg/02.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0067_cooking/mp3/02.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>1</strong>
 </center>
@@ -107,9 +107,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0085/03.jpg" /></p>
-<p>First he met some blackberry gatherers who asked him for the egg. They used it to shoot at the berries and it broke.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/ogg/03.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/mp3/03.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/03.jpg" /></p>
+<p>I chop a cabbage.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0067_cooking/ogg/03.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0067_cooking/mp3/03.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>2</strong>
 </center>
@@ -117,9 +117,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0085/04.jpg" /></p>
-<p>The boy cried, “Ei...Ei...Ei! You have caused trouble for me! The egg was not mine. It belonged to my grandmother. And grandmother didn't give it to me for nothing. She gave it to me to get bride wealth.”</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/ogg/04.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/mp3/04.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/04.jpg" /></p>
+<p>I grate the carrots.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0067_cooking/ogg/04.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0067_cooking/mp3/04.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>3</strong>
 </center>
@@ -127,9 +127,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0085/05.jpg" /></p>
-<p>So the berry gatherers gave him the stick they used to bring down the berries. And the boy walked on.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/ogg/05.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/mp3/05.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/05.jpg" /></p>
+<p>I wash the beans.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0067_cooking/ogg/05.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0067_cooking/mp3/05.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>4</strong>
 </center>
@@ -137,9 +137,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0085/06.jpg" /></p>
-<p>Next the boy met some builders who asked him for his stick. They used it to build a house and it broke into pieces.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/ogg/06.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/mp3/06.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/06.jpg" /></p>
+<p>I cut the butternut.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0067_cooking/ogg/06.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0067_cooking/mp3/06.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>5</strong>
 </center>
@@ -147,9 +147,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0085/07.jpg" /></p>
-<p>The boy cried, “Hee...Hee...Hee! You have caused trouble for me! The stick was not mine, it belonged to the berry gatherers. And they didn't give it to me for nothing. They gave it to me in place of my egg. The egg was not mine. It belonged to my grandmother. And grandmother didn't give it to me for nothing, She gave it to me to get bride wealth.”</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/ogg/07.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/mp3/07.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/07.jpg" /></p>
+<p>I chop the spinach.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0067_cooking/ogg/07.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0067_cooking/mp3/07.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>6</strong>
 </center>
@@ -157,9 +157,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0085/08.jpg" /></p>
-<p>So the builders gave him a bundle of grass for thatching. And the boy walked on.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/ogg/08.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/mp3/08.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/08.jpg" /></p>
+<p>My mom chops the onions.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0067_cooking/ogg/08.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0067_cooking/mp3/08.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>7</strong>
 </center>
@@ -167,9 +167,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0085/09.jpg" /></p>
-<p>Next the boy found a herdsman who asked for the boy's bundle of grass. The herdsman gave it to the cow and the cow ate it all up.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/ogg/09.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/mp3/09.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/09.jpg" /></p>
+<p>Onions make me cry when they are chopped.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0067_cooking/ogg/09.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0067_cooking/mp3/09.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>8</strong>
 </center>
@@ -177,68 +177,18 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0085/10.jpg" /></p>
-<p>The boy cried, “E...E...E! You have caused trouble for me! The grass was not mine. It belonged to the builders. The builders did not give it to me for nothing. They broke my stick. The stick was not mine. It belonged to the berry gatherers. And they didn't give it to me for nothing. They gave it to me in place of my egg. The egg was not mine. It belonged to my grandmother. And grandmother did not give it to me for nothing. She gave it to me to get bride wealth.”</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/ogg/10.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/mp3/10.mp3" type="audio/mpeg"> </audio>
-<center>
-<strong>9</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0085/11.jpg" /></p>
-<p>So the herdsman gave the boy his cow. And the boy walked on.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/ogg/11.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/mp3/11.mp3" type="audio/mpeg"> </audio>
-<center>
-<strong>10</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0085/12.jpg" /></p>
-<p>While on his way home, the boy came across a marriage celebration. The bride's family asked him for his cow. He gave it to them. And they slaughtered it and ate it all.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/ogg/12.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/mp3/12.mp3" type="audio/mpeg"> </audio>
-<center>
-<strong>11</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0085/13.jpg" /></p>
-<p>The boy cried, “Ei...Ei...Ei! You have caused trouble for me! The cow was not mine. It belonged to the herdsman. The herdsman didn't give it to me for nothing. He gave it to me in place of my bundle of grass. The grass was not mine. It belonged to the builders. The builders didn't give it to me for nothing. They broke my stick. The stick was not mine. It belonged to the berry gatherers. They didn't give it to me for nothing. They gave it to me in place of my egg. The egg was not mine. It belonged to my grandmother. And grandmother didn't give it to me for nothing, She gave it to me to get bride wealth.”</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/ogg/13.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/mp3/13.mp3" type="audio/mpeg"> </audio>
-<center>
-<strong>12</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0085/14.jpg" /></p>
-<p>Then the bride's family said, “We have nothing left to pay you. But let us give you the bride.” And so, the saying came to pass that, “What goes round comes around!”</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/ogg/14.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/mp3/14.mp3" type="audio/mpeg"> </audio>
-<center>
-<strong>13</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<h2 id="an-egg-for-bride-wealth-1">An egg for bride wealth</h2>
-<strong>Text:</strong> Nambi Sseppuuya Community Resource Centre<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> <br> <strong>Language:</strong> English<br> <strong>Read by:</strong> Stella Maris Namae<br>
+<h2 id="cooking-1">Cooking</h2>
+<strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Illustrations:</strong> Kathy Arbuckle<br> <strong>Translation:</strong> <br> <strong>Language:</strong> English<br> <strong>Read by:</strong> Stella Maris Namae<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/egg-bride-wealth'>here</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/cooking'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
 <p><center><div class="license">
-<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
+<a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">Creative Commons Attribution-NonCommercial 3.0 Unported License</a>.
 </div></center>
 
 
