--- a/audio/asp/index.html
+++ b/audio/asp/index.html
@@ -20,15 +20,40 @@
       <td><img style="vertical-align:top; height:50%" src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0083/11.jpg" /></td></tr></table>
 
       <h2>List of stories by language</h2>
-        <h3>English</h3>
+        <h3><a name="en"></a>English</h3>
           <ul>
+            <li><a href="en/0001_a-very-tall-man_audio-slides.html" target="_blank">A very tall man</a></li>
+            <li><a href="en/0002_look-at-the-animals_audio-slides.html" target="_blank">Look at the animals</a></li>
+            <li><a href="en/0003_school-clothes_audio-slides.html" target="_blank">School clothes</a></li>
+            <li><a href="en/0004_goat-dog-and-cow_audio-slides.html" target="_blank">Goat, Dog and Cow</a></li>
+            <li><a href="en/0006_anansi-and-wisdom_audio-slides.html" target="_blank">Anansi and Wisdom</a></li>
+            <li><a href="en/0008_what-are-you-doing_audio-slides.html" target="_blank">What are you doing?</a></li>
+            <li><a href="en/0009_where-is-my-cat_audio-slides.html" target="_blank">Where is my cat?</a></li>
+            <li><a href="en/0027_decision_audio-slides.html" target="_blank">Decision</a></li>
+            <li><a href="en/0030_feelings_audio-slides.html" target="_blank">Feelings</a></li>
+            <li><a href="en/0052_simbegwire_audio-slides.html" target="_blank">Simbegwire</a></li>
+            <li><a href="en/0066_nozibele-and-the-three-hairs_audio-slides.html" target="_blank">Nozibele and the three hairs</a></li>
+            <li><a href="en/0067_cooking_audio-slides.html" target="_blank">Cooking</a></li>
+            <li><a href="en/0072_the-honeyguides-revenge_audio-slides.html" target="_blank">The Honeyguide's revenge</a></li>
+            <li><a href="en/0073_counting_audio-slides.html" target="_blank">Counting</a></li>
+            <li><a href="en/0085_an-egg-for-bride-wealth_audio-slides.html" target="_blank">An egg for bride wealth</a></li>
+            <li><a href="en/0087_i-like-to-read_audio-slides.html" target="_blank">I like to read!</a></li>
+            <li><a href="en/0089_khalai-talks-to-plants_audio-slides.html" target="_blank">Khalai talks to plants</a></li>
+            <li><a href="en/0095_zama-is-great_audio-slides.html" target="_blank">Zama is great!</a></li>
+            <li><a href="en/0110_a-tiny-seed-the-story-of-wangari-maathai_audio-slides.html" target="_blank">A Tiny Seed: The Story of Wangari Maathai</a></li>
+            <li><a href="en/0111_why-hippos-have-no-hair_audio-slides.html" target="_blank">Why hippos have no hair</a></li>
+            <li><a href="en/0112_my-body_audio-slides.html" target="_blank">My body</a></li>
+            <li><a href="en/0120_hair_audio-slides.html" target="_blank">Hair</a></li>
+            <li><a href="en/0129_lazy-little-brother_audio-slides.html" target="_blank">Lazy little brother</a></li>
+            <li><a href="en/0141_chicken-and-millipede_audio-slides.html" target="_blank">Chicken and Millipede</a></li>
+            <li><a href="en/0156_the-hungry-crocodile_audio-slides.html" target="_blank">The hungry crocodile</a></li>
+            <li><a href="en/0158_hen-and-eagle_audio-slides.html" target="_blank">Hen and Eagle</a></li>
+            <li><a href="en/0179_red_audio-slides.html" target="_blank">Red</a></li>
+            <li><a href="en/0190_esther-takes-mummys-sweets_audio-slides.html" target="_blank">Esther takes Mummy's sweets</a></li>
+            <li><a href="en/0201_donkey-child_audio-slides.html" target="_blank">Donkey Child</a></li>
+            <li><a href="en/0293_i-enjoy_audio-slides.html" target="_blank">I enjoy</a></li>
             <li><a href="en/0311_dancing_audio-slides.html" target="_blank">Dancing</a></li>
             <li><a href="en/0331_rain_audio-slides.html" target="_blank">Rain</a></li>
-            <li><a href="en/0179_red_audio-slides.html" target="_blank">Red</a></li>
-            <li><a href="en/0085_an-egg-for-bride-wealth_audio-slides.html" target="_blank">An Egg for Bride Wealth</a></li>
-            <li><a href="en/0156_the-hungry-crocodile_audio-slides.html" target="_blank">The Hungry Crocodile</a></li>
-            <li><a href="en/0190_esther-takes-mummys-sweets_audio-slides.html" target="_blank">Esther Takes Mummy's Sweets</a></li>
-            <li><a href="en/0003_school-clothes_audio-slides.html" target="_blank">School Clothes</a></li>
           </ul>
         <h3>Luganda</h3>
           <ul>
