--- a/audio/asp/en/0006_anansi-and-wisdom_audio-slides.html
+++ b/audio/asp/en/0006_anansi-and-wisdom_audio-slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>An egg for bride wealth - Global African Storybook</title>
+  <title>Anansi and Wisdom - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,19 +87,19 @@
 </head>
 <body>
 
-<section id="an-egg-for-bride-wealth" class="slide level1">
-<h1>An egg for bride wealth</h1>
+<section id="anansi-and-wisdom" class="slide level1">
+<h1>Anansi and Wisdom</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0085/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/01.jpg" />
 </center>
   
-<p><audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/ogg/01.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/mp3/01.mp3" type="audio/mpeg"> </audio></p>
+<p><audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0006_anansi-and-wisdom/ogg/01.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0006_anansi-and-wisdom/mp3/01.mp3" type="audio/mpeg"> </audio></p>
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0085/02.jpg" /></p>
-<p>Once upon a time, there was an old woman who loved her grandson very much. She gave him an egg as a gift. She said, “From this egg you will get bride wealth for your marriage when you are of age.” And the boy went on his way.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/ogg/02.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/mp3/02.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/02.jpg" /></p>
+<p>Long long ago people didn't know anything. They didn't know how to plant crops, or how to weave cloth, or how to make iron tools. The god Nyame up in the sky had all the wisdom of the world. He kept it safe in a clay pot.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0006_anansi-and-wisdom/ogg/02.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0006_anansi-and-wisdom/mp3/02.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>1</strong>
 </center>
@@ -107,9 +107,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0085/03.jpg" /></p>
-<p>First he met some blackberry gatherers who asked him for the egg. They used it to shoot at the berries and it broke.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/ogg/03.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/mp3/03.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/03.jpg" /></p>
+<p>One day, Nyame decided that he would give the pot of wisdom to Anansi. Every time Anansi looked in the clay pot, he learned something new. It was so exciting!</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0006_anansi-and-wisdom/ogg/03.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0006_anansi-and-wisdom/mp3/03.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>2</strong>
 </center>
@@ -117,9 +117,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0085/04.jpg" /></p>
-<p>The boy cried, “Ei...Ei...Ei! You have caused trouble for me! The egg was not mine. It belonged to my grandmother. And grandmother didn't give it to me for nothing. She gave it to me to get bride wealth.”</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/ogg/04.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/mp3/04.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/04.jpg" /></p>
+<p>Greedy Anansi thought, “I'll keep the pot safe at the top of a tall tree. Then I can have it all to myself!” He spun a long thread, wound it round the clay pot, and tied it to his stomach. He began to climb the tree. But it was hard climbing the tree with the pot bumping him in the knees all the time.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0006_anansi-and-wisdom/ogg/04.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0006_anansi-and-wisdom/mp3/04.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>3</strong>
 </center>
@@ -127,9 +127,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0085/05.jpg" /></p>
-<p>So the berry gatherers gave him the stick they used to bring down the berries. And the boy walked on.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/ogg/05.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/mp3/05.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/05.jpg" /></p>
+<p>All the time Anansi's young son had been standing at the bottom of the tree watching. He said, “Wouldn't it be easier to climb if you tied the pot to your back instead?” Anansi tried tying the clay pot full of wisdom to his back, and it really was a lot easier.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0006_anansi-and-wisdom/ogg/05.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0006_anansi-and-wisdom/mp3/05.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>4</strong>
 </center>
@@ -137,9 +137,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0085/06.jpg" /></p>
-<p>Next the boy met some builders who asked him for his stick. They used it to build a house and it broke into pieces.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/ogg/06.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/mp3/06.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/06.jpg" /></p>
+<p>In no time he reached the top of the tree. But then he stopped and thought, “I'm supposed to be the one with all the wisdom, and here my son was cleverer than me!” Anansi was so angry about this that he threw the clay pot down out of the tree.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0006_anansi-and-wisdom/ogg/06.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0006_anansi-and-wisdom/mp3/06.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>5</strong>
 </center>
@@ -147,9 +147,10 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0085/07.jpg" /></p>
-<p>The boy cried, “Hee...Hee...Hee! You have caused trouble for me! The stick was not mine, it belonged to the berry gatherers. And they didn't give it to me for nothing. They gave it to me in place of my egg. The egg was not mine. It belonged to my grandmother. And grandmother didn't give it to me for nothing, She gave it to me to get bride wealth.”</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/ogg/07.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/mp3/07.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/07.jpg" /></p>
+<p>It smashed into pieces on the ground. The wisdom was free for everyone to share.</p>
+<p>And that is how people learned to farm, to weave cloth, to make iron tools, and all the other things that people know how to do.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0006_anansi-and-wisdom/ogg/07.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0006_anansi-and-wisdom/mp3/07.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>6</strong>
 </center>
@@ -157,82 +158,12 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0085/08.jpg" /></p>
-<p>So the builders gave him a bundle of grass for thatching. And the boy walked on.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/ogg/08.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/mp3/08.mp3" type="audio/mpeg"> </audio>
-<center>
-<strong>7</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0085/09.jpg" /></p>
-<p>Next the boy found a herdsman who asked for the boy's bundle of grass. The herdsman gave it to the cow and the cow ate it all up.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/ogg/09.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/mp3/09.mp3" type="audio/mpeg"> </audio>
-<center>
-<strong>8</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0085/10.jpg" /></p>
-<p>The boy cried, “E...E...E! You have caused trouble for me! The grass was not mine. It belonged to the builders. The builders did not give it to me for nothing. They broke my stick. The stick was not mine. It belonged to the berry gatherers. And they didn't give it to me for nothing. They gave it to me in place of my egg. The egg was not mine. It belonged to my grandmother. And grandmother did not give it to me for nothing. She gave it to me to get bride wealth.”</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/ogg/10.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/mp3/10.mp3" type="audio/mpeg"> </audio>
-<center>
-<strong>9</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0085/11.jpg" /></p>
-<p>So the herdsman gave the boy his cow. And the boy walked on.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/ogg/11.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/mp3/11.mp3" type="audio/mpeg"> </audio>
-<center>
-<strong>10</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0085/12.jpg" /></p>
-<p>While on his way home, the boy came across a marriage celebration. The bride's family asked him for his cow. He gave it to them. And they slaughtered it and ate it all.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/ogg/12.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/mp3/12.mp3" type="audio/mpeg"> </audio>
-<center>
-<strong>11</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0085/13.jpg" /></p>
-<p>The boy cried, “Ei...Ei...Ei! You have caused trouble for me! The cow was not mine. It belonged to the herdsman. The herdsman didn't give it to me for nothing. He gave it to me in place of my bundle of grass. The grass was not mine. It belonged to the builders. The builders didn't give it to me for nothing. They broke my stick. The stick was not mine. It belonged to the berry gatherers. They didn't give it to me for nothing. They gave it to me in place of my egg. The egg was not mine. It belonged to my grandmother. And grandmother didn't give it to me for nothing, She gave it to me to get bride wealth.”</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/ogg/13.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/mp3/13.mp3" type="audio/mpeg"> </audio>
-<center>
-<strong>12</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0085/14.jpg" /></p>
-<p>Then the bride's family said, “We have nothing left to pay you. But let us give you the bride.” And so, the saying came to pass that, “What goes round comes around!”</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/ogg/14.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/mp3/14.mp3" type="audio/mpeg"> </audio>
-<center>
-<strong>13</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<h2 id="an-egg-for-bride-wealth-1">An egg for bride wealth</h2>
-<strong>Text:</strong> Nambi Sseppuuya Community Resource Centre<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> <br> <strong>Language:</strong> English<br> <strong>Read by:</strong> Stella Maris Namae<br>
+<h2 id="anansi-and-wisdom-1">Anansi and Wisdom</h2>
+<strong>Text:</strong> Ghanaian folktale<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> <br> <strong>Language:</strong> English<br> <strong>Read by:</strong> Stella Maris Namae<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/egg-bride-wealth'>here</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/anansi-and-wisdom'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
