--- a/audio/asp/en/0027_decision_audio-slides.html
+++ b/audio/asp/en/0027_decision_audio-slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>An egg for bride wealth - Global African Storybook</title>
+  <title>Decision - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,19 +87,20 @@
 </head>
 <body>
 
-<section id="an-egg-for-bride-wealth" class="slide level1">
-<h1>An egg for bride wealth</h1>
+<section id="decision" class="slide level1">
+<h1>Decision</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0085/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/01.jpg" />
 </center>
   
-<p><audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/ogg/01.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/mp3/01.mp3" type="audio/mpeg"> </audio></p>
+<p><audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0027_decision/ogg/01.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0027_decision/mp3/01.mp3" type="audio/mpeg"> </audio></p>
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0085/02.jpg" /></p>
-<p>Once upon a time, there was an old woman who loved her grandson very much. She gave him an egg as a gift. She said, “From this egg you will get bride wealth for your marriage when you are of age.” And the boy went on his way.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/ogg/02.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/mp3/02.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/02.jpg" /></p>
+<p>My village had many problems.</p>
+<p>We made a long line to fetch water from one tap.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0027_decision/ogg/02.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0027_decision/mp3/02.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>1</strong>
 </center>
@@ -107,9 +108,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0085/03.jpg" /></p>
-<p>First he met some blackberry gatherers who asked him for the egg. They used it to shoot at the berries and it broke.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/ogg/03.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/mp3/03.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/03.jpg" /></p>
+<p>We waited for food donated by others.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0027_decision/ogg/03.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0027_decision/mp3/03.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>2</strong>
 </center>
@@ -117,9 +118,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0085/04.jpg" /></p>
-<p>The boy cried, “Ei...Ei...Ei! You have caused trouble for me! The egg was not mine. It belonged to my grandmother. And grandmother didn't give it to me for nothing. She gave it to me to get bride wealth.”</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/ogg/04.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/mp3/04.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/04.jpg" /></p>
+<p>We locked our houses early because of thieves.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0027_decision/ogg/04.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0027_decision/mp3/04.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>3</strong>
 </center>
@@ -127,9 +128,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0085/05.jpg" /></p>
-<p>So the berry gatherers gave him the stick they used to bring down the berries. And the boy walked on.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/ogg/05.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/mp3/05.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/05.jpg" /></p>
+<p>Many children dropped out of school.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0027_decision/ogg/05.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0027_decision/mp3/05.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>4</strong>
 </center>
@@ -137,9 +138,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0085/06.jpg" /></p>
-<p>Next the boy met some builders who asked him for his stick. They used it to build a house and it broke into pieces.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/ogg/06.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/mp3/06.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/06.jpg" /></p>
+<p>Young girls worked as maids in other villages.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0027_decision/ogg/06.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0027_decision/mp3/06.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>5</strong>
 </center>
@@ -147,9 +148,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0085/07.jpg" /></p>
-<p>The boy cried, “Hee...Hee...Hee! You have caused trouble for me! The stick was not mine, it belonged to the berry gatherers. And they didn't give it to me for nothing. They gave it to me in place of my egg. The egg was not mine. It belonged to my grandmother. And grandmother didn't give it to me for nothing, She gave it to me to get bride wealth.”</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/ogg/07.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/mp3/07.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/07.jpg" /></p>
+<p>Young boys roamed around the village while others worked on people's farms.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0027_decision/ogg/07.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0027_decision/mp3/07.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>6</strong>
 </center>
@@ -157,9 +158,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0085/08.jpg" /></p>
-<p>So the builders gave him a bundle of grass for thatching. And the boy walked on.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/ogg/08.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/mp3/08.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/08.jpg" /></p>
+<p>When the wind blew, waste paper hung on trees and fences.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0027_decision/ogg/08.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0027_decision/mp3/08.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>7</strong>
 </center>
@@ -167,9 +168,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0085/09.jpg" /></p>
-<p>Next the boy found a herdsman who asked for the boy's bundle of grass. The herdsman gave it to the cow and the cow ate it all up.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/ogg/09.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/mp3/09.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/09.jpg" /></p>
+<p>People were cut by broken glass that was thrown carelessly.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0027_decision/ogg/09.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0027_decision/mp3/09.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>8</strong>
 </center>
@@ -177,9 +178,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0085/10.jpg" /></p>
-<p>The boy cried, “E...E...E! You have caused trouble for me! The grass was not mine. It belonged to the builders. The builders did not give it to me for nothing. They broke my stick. The stick was not mine. It belonged to the berry gatherers. And they didn't give it to me for nothing. They gave it to me in place of my egg. The egg was not mine. It belonged to my grandmother. And grandmother did not give it to me for nothing. She gave it to me to get bride wealth.”</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/ogg/10.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/mp3/10.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/10.jpg" /></p>
+<p>Then one day, the tap dried up and our containers were empty.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0027_decision/ogg/10.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0027_decision/mp3/10.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>9</strong>
 </center>
@@ -187,9 +188,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0085/11.jpg" /></p>
-<p>So the herdsman gave the boy his cow. And the boy walked on.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/ogg/11.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/mp3/11.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/11.jpg" /></p>
+<p>My father walked from house to house asking people to attend a village meeting.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0027_decision/ogg/11.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0027_decision/mp3/11.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>10</strong>
 </center>
@@ -197,9 +198,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0085/12.jpg" /></p>
-<p>While on his way home, the boy came across a marriage celebration. The bride's family asked him for his cow. He gave it to them. And they slaughtered it and ate it all.</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/ogg/12.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/mp3/12.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/12.jpg" /></p>
+<p>People gathered under a big tree and listened.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0027_decision/ogg/12.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0027_decision/mp3/12.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>11</strong>
 </center>
@@ -207,9 +208,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0085/13.jpg" /></p>
-<p>The boy cried, “Ei...Ei...Ei! You have caused trouble for me! The cow was not mine. It belonged to the herdsman. The herdsman didn't give it to me for nothing. He gave it to me in place of my bundle of grass. The grass was not mine. It belonged to the builders. The builders didn't give it to me for nothing. They broke my stick. The stick was not mine. It belonged to the berry gatherers. They didn't give it to me for nothing. They gave it to me in place of my egg. The egg was not mine. It belonged to my grandmother. And grandmother didn't give it to me for nothing, She gave it to me to get bride wealth.”</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/ogg/13.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/mp3/13.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/13.jpg" /></p>
+<p>My father stood up and said, “We need to work together to solve our problems.”</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0027_decision/ogg/13.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0027_decision/mp3/13.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>12</strong>
 </center>
@@ -217,9 +218,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0085/14.jpg" /></p>
-<p>Then the bride's family said, “We have nothing left to pay you. But let us give you the bride.” And so, the saying came to pass that, “What goes round comes around!”</p>
-<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/ogg/14.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0085_an-egg-for-bride-wealth/mp3/14.mp3" type="audio/mpeg"> </audio>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/14.jpg" /></p>
+<p>Eight-year-old Juma, sitting on a tree trunk shouted, “I can help with cleaning up.”</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0027_decision/ogg/14.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0027_decision/mp3/14.mp3" type="audio/mpeg"> </audio>
 <center>
 <strong>13</strong>
 </center>
@@ -227,12 +228,43 @@
 </section>
 <section class="slide level1">
 
-<h2 id="an-egg-for-bride-wealth-1">An egg for bride wealth</h2>
-<strong>Text:</strong> Nambi Sseppuuya Community Resource Centre<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> <br> <strong>Language:</strong> English<br> <strong>Read by:</strong> Stella Maris Namae<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/15.jpg" /></p>
+<p>One woman said, “The women can join me to grow food.”</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0027_decision/ogg/15.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0027_decision/mp3/15.mp3" type="audio/mpeg"> </audio>
+<center>
+<strong>14</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/16.jpg" /></p>
+<p>Another man stood up and said, “The men will dig a well.”</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0027_decision/ogg/16.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0027_decision/mp3/16.mp3" type="audio/mpeg"> </audio>
+<center>
+<strong>15</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/17.jpg" /></p>
+<p>We all shouted with one voice, “We must change our lives.”</p>
+<p>From that day we worked together to solve our problems.</p>
+<audio> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0027_decision/ogg/17.ogg" type="audio/ogg"> <source src="https://raw.githubusercontent.com/global-asp/asp-audio/master/en/0027_decision/mp3/17.mp3" type="audio/mpeg"> </audio>
+<center>
+<strong>16</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="decision-1">Decision</h2>
+<strong>Text:</strong> Ursula Nafula<br> <strong>Illustrations:</strong> Vusi Malindi<br> <strong>Translation:</strong> <br> <strong>Language:</strong> English<br> <strong>Read by:</strong> Stella Maris Namae<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/egg-bride-wealth'>here</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/decision'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
